kubernetes/apps/hydra/trading/httpRoute-http.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: trading-http
  namespace: trading
spec:
  parentRefs:
    - name: http-gateway
      namespace: gateways
  hostnames:
    - trading.thetillhoff.de
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
